--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "C2G expressjs server",
   "main": "index.js",
-	"scripts": {
-		"start": "node index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [
     "expressjs",
     "express",
@@ -15,7 +15,9 @@
   "author": "Lukas Papik",
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "helmet": "^3.20.0",
     "request": "^2.88.0",
     "roomdata": "^1.1.7-b",
     "socket.io": "^2.2.0"
