--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "helmet": "^3.20.0",
+    "helmet": "^3.21.2",
     "request": "^2.88.0",
     "roomdata": "^1.1.7-b",
     "socket.io": "^2.2.0",
-    "standard": "^13.1.0"
+    "standard": "^13.1.0",
+    "tiktok-scraper": "^1.0.6"
   }
 }
